--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,10 @@
 theme: jekyll-theme-minimal
+title: Andrés F. López-Lopera
+description:
+  Postdoctoral researcher <br>
+  Toulouse Mathematics Institute <br>
+  Toulouse, France
+logo: personal/photoRound.png
+gscholar: https://scholar.google.com.co/citations?user=RwmuQ1sAAAAJ&hl=en
+researchgate: https://www.researchgate.net/profile/Andres_Lopez_Lopera
+linkedin: https://fr.linkedin.com/in/andresflopezlopera?trk=public_profile_samename_mini-profile_title
