--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
-title: Andrés López-Lopera
+title: Andrés F. López-Lopera
 description:
   Postdoctoral researcher <br>
   Toulouse Mathematics Institute <br>
