--- a/_config.yml
+++ b/_config.yml
@@ -8,3 +8,4 @@ logo: personal/photoRound.png
 gscholar: https://scholar.google.com.co/citations?user=RwmuQ1sAAAAJ&hl=en
 researchgate: https://www.researchgate.net/profile/Andres_Lopez_Lopera
 linkedin: https://fr.linkedin.com/in/andresflopezlopera?trk=public_profile_samename_mini-profile_title
+section: CV
