--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,8 @@ title: Andrés F. López-Lopera
 description:
   Postdoctoral researcher <br>
   Toulouse Mathematics Institute <br>
-  Toulouse, France
+  Toulouse, France <\br><\br>
+   <a href="https://anfelopera.github.io/CV/">Curriculum Vitae</a> 
 logo: personal/photoRound.png
 gscholar: https://scholar.google.com.co/citations?user=RwmuQ1sAAAAJ&hl=en
 researchgate: https://www.researchgate.net/profile/Andres_Lopez_Lopera
