--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,11 @@ description:
   Postdoctoral researcher <br>
   Toulouse Mathematics Institute <br>
   Toulouse, France <br><br>
+bookmarks:
   <a href="https://anfelopera.github.io/">Homepage</a> <br>
   <a href="https://anfelopera.github.io/CV/">Curriculum Vitae</a> <br>
   <a href="https://anfelopera.github.io/publications/">Publications</a> <br>
+
 logo: personal/photoRound.png
 gscholar: https://scholar.google.com.co/citations?user=RwmuQ1sAAAAJ&hl=en
 researchgate: https://www.researchgate.net/profile/Andres_Lopez_Lopera
