--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ description:
   Postdoctoral researcher <br>
   Toulouse Mathematics Institute <br>
   Toulouse, France <br><br>
+contact: see my cv.
 bookmarks:
   <a href="https://anfelopera.github.io/">Homepage</a> <br>
   <a href="https://anfelopera.github.io/CV/">Curriculum Vitae</a> <br>
