--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Andrés F. López-Lopera
 description:
   Postdoctoral researcher <br>
   Toulouse Mathematics Institute <br>
-  Toulouse, France <br><br>
+  Toulouse, France.
 contact: see my cv.
 bookmarks:
   <a href="https://anfelopera.github.io/">Homepage</a> <br>
