--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,11 @@ description:
   Toulouse Mathematics Institute <br>
   Toulouse, France.
 orcid: https://orcid.org/0000-0001-6261-8699
-contact: see my cv.
+contact:
+  <textarea>andres-felipe.lopez[a]math.univ-toulouse.fr </textarea><br>
+  BRGM, Office R14, Building D3 <br>
+  3 avenue Claude-Guillemin <br>
+  45060 Orléans Cedex 2, France.
 bookmarks:
   <a href="https://anfelopera.github.io/">Homepage</a> <br>
   <a href="https://anfelopera.github.io/CV/">Curriculum Vitae</a> <br>
