--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description:
   Toulouse, France.
 orcid: https://orcid.org/0000-0001-6261-8699
 contact:
-  email address: (see my cv)
+  (see my email address in my cv) <br>
   BRGM, Office R14, Building D3 <br>
   3 avenue Claude-Guillemin <br>
   45060 Orléans Cedex 2, France.
