--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ contact:
   3 avenue Claude-Guillemin <br>
   45060 Orléans Cedex 2, France.
 bookmarks:
-  <a href="https://anfelopera.github.io/">Homepage</a> <br>
+  <font size="+2"><a href="https://anfelopera.github.io/">Homepage</a></font> <br>
   <a href="https://anfelopera.github.io/CV/">Curriculum Vitae</a> <br>
   <a href="https://anfelopera.github.io/publications/">Publications</a> <br>
 logo: personal/photoRound.png
