--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ contact:
   3 avenue Claude-Guillemin <br>
   45060 Orléans Cedex 2, France.
 bookmarks:
-  <font size="+1"><a href="https://anfelopera.github.io/">Homepage</a></font> <br>
-  <a href="https://anfelopera.github.io/CV/">Curriculum Vitae</a> <br>
-  <a href="https://anfelopera.github.io/publications/">Publications</a> <br>
+  <font size="+0.5"><a href="https://anfelopera.github.io/">Homepage</a></font> <br>
+  <font size="+0.5"><a href="https://anfelopera.github.io/CV/">Curriculum Vitae</a></font> <br>
+  <font size="+0.5"><a href="https://anfelopera.github.io/publications/">Publications</a></font> <br>
 logo: personal/photoRound.png
 gscholar: https://scholar.google.com.co/citations?user=RwmuQ1sAAAAJ&hl=en
 researchgate: https://www.researchgate.net/profile/Andres_Lopez_Lopera
