--- a/_config.yml
+++ b/_config.yml
@@ -2,14 +2,14 @@ theme: jekyll-theme-minimal
 title: Andrés F. López-Lopera
 description:
   Postdoctoral researcher <br>
-  Toulouse Mathematics Institute <br>
+  M2CI-DTIS, ONERA <br>
   Toulouse, France.
 orcid: https://orcid.org/0000-0001-6261-8699
 contact:
   (see my email address in my cv) <br>
-  BRGM, Office R14, Building D3 <br>
-  3 avenue Claude-Guillemin <br>
-  45060 Orléans Cedex 2, France.
+  M2CI-DTIS, ONERA <br>
+  2 Avenue Edouard Belin <br>
+  31000 Toulouse, France.
 bookmarks:
   <font size="+0.5"><a href="https://anfelopera.github.io/">Homepage</a></font> <br>
   <font size="+0.5"><a href="https://anfelopera.github.io/CV/">Curriculum Vitae</a></font> <br>
