updating contact info

--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,10 @@ title: Andrés F. López-Lopera
 description:
   Postdoctoral researcher <br>
   M2CI-DTIS, ONERA <br>
-  Toulouse, France.
+  31000 Toulouse, France.
 orcid: https://orcid.org/0000-0001-6261-8699
 contact:
-  (see my email address in my cv) <br>
-  M2CI-DTIS, ONERA <br>
-  2 Avenue Edouard Belin <br>
-  31000 Toulouse, France.
+  (see my email address in my cv)
 bookmarks:
   <font size="+0.5"><a href="https://anfelopera.github.io/">Homepage</a></font> <br>
   <font size="+0.5"><a href="https://anfelopera.github.io/CV/">Curriculum Vitae</a></font> <br>
