--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 theme: jekyll-theme-minimal
 title: Andrés F. López-Lopera
 description:
-  Postdoctoral researcher <br>
-  M2CI-DTIS, ONERA <br>
-  31000 Toulouse, France.
+  Associate Professor <br>
+  Université Polytechnique Hauts-de-France <br>
+  59300 Valenciennes, France.
 orcid: https://orcid.org/0000-0001-6261-8699
 contact:
   (see my email address in my cv)
