updating academic position

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-minimal
 title: Andrés F. López-Lopera
 description:
-  Assistant Professor <br>
+  Associate Professor <br>
   Université Polytechnique Hauts-de-France <br>
   59300 Valenciennes, France.
 orcid: https://orcid.org/0000-0001-6261-8699
