adding HAL link

--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@ bookmarks:
   <font size="+0.5"><a href="https://anfelopera.github.io/toolboxes/">Toolboxes</a></font> <br>
 logo: personal/photoRound.png
 gscholar: https://scholar.google.com.co/citations?user=RwmuQ1sAAAAJ&hl=en
+HAL : https://cv.archives-ouvertes.fr/anfelopera
 researchgate: https://www.researchgate.net/profile/Andres_Lopez_Lopera
 linkedin: https://fr.linkedin.com/in/andresflopezlopera?trk=public_profile_samename_mini-profile_title
 section: CV
