--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ theme: jekyll-theme-minimal
 title: Andrés F. López-Lopera
 description:
   Associate Professor <br>
-  Université Polytechnique Hauts-de-France <br>
+  Univ. Polytechnique Hauts-de-France <br>
   59300 Valenciennes, France.
 orcid: https://orcid.org/0000-0001-6261-8699
 contact:
