--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-minimal
 title: Andrés F. López-Lopera
 description:
-  Associate Professor <br>
+  Associate Professor, CERAMATHS <br>
   Univ. Polytechnique Hauts-de-France <br>
   59300 Valenciennes, France.
 orcid: https://orcid.org/0000-0001-6261-8699
