--- a/_config.yml
+++ b/_config.yml
@@ -9,10 +9,10 @@ contact:
   (see my email address in my cv)
 bookmarks:
   <font size="+0.5"><a href="https://anfelopera.github.io/">Homepage</a></font> <br>
-  <font size="+0.5"><a href="https://anfelopera.github.io/CV/">Curriculum Vitae</a></font> <br>
   <font size="+0.5"><a href="https://anfelopera.github.io/teaching/">Teaching</a></font> <br>
   <font size="+0.5"><a href="https://anfelopera.github.io/publications/">Publications</a></font> <br>
   <font size="+0.5"><a href="https://anfelopera.github.io/toolboxes/">Toolboxes</a></font> <br>
+  <font size="+0.5"><a href="https://anfelopera.github.io/funding/">Funding</a></font> <br>
 logo: personal/photoRound.png
 gscholar: https://scholar.google.com.co/citations?user=RwmuQ1sAAAAJ&hl=en
 HAL : https://cv.archives-ouvertes.fr/anfelopera
