--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description:
   59300 Valenciennes, France.
 orcid: https://orcid.org/0000-0001-6261-8699
 contact:
-  (see my email address in my cv)
+  andres{dot}lopezlopera{at}uphf{dot}fr
 bookmarks:
   <font size="+0.5"><a href="https://anfelopera.github.io/">Homepage</a></font> <br>
   <font size="+0.5"><a href="https://anfelopera.github.io/teaching/">Teaching</a></font> <br>
