adding a new section - supervision

--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ bookmarks:
   <font size="+0.5"><a href="https://anfelopera.github.io/teaching/">Teaching</a></font> <br>
   <font size="+0.5"><a href="https://anfelopera.github.io/publications/">Publications</a></font> <br>
   <font size="+0.5"><a href="https://anfelopera.github.io/toolboxes/">Toolboxes</a></font> <br>
+  <font size="+0.5"><a href="https://anfelopera.github.io/funding/">Supervision</a></font> <br>
   <font size="+0.5"><a href="https://anfelopera.github.io/funding/">Funding</a></font> <br>
 logo: personal/photoRound.png
 gscholar: https://scholar.google.com.co/citations?user=RwmuQ1sAAAAJ&hl=en
