--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ bookmarks:
   <font size="+0.5"><a href="https://anfelopera.github.io/funding/">Funding</a></font> <br>
   <font size="+0.5"><a href="https://anfelopera.github.io/supervision/">Supervision</a></font> <br>
   <font size="+0.5"><a href="https://anfelopera.github.io/publications/">Publications</a></font> <br>
+  <font size="+0.5"><a href="https://anfelopera.github.io/teaching/">Research networks</a></font> <br>
   <font size="+0.5"><a href="https://anfelopera.github.io/toolboxes/">Toolboxes</a></font> <br>
   <font size="+0.5"><a href="https://anfelopera.github.io/teaching/">Teaching</a></font> <br>
 logo: personal/photoRound.png
