updating affiliation yml doc

--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 theme: jekyll-theme-minimal
 title: Andrés F. López-Lopera
 description:
-  Associate Professor, CERAMATHS <br>
-  Univ. Polytechnique Hauts-de-France <br>
-  59300 Valenciennes, France.
+  Associate Professor, IMAG <br>
+  Univ. de Montpellier <br>
+  34090 Montpellier, France.
 orcid: https://orcid.org/0000-0001-6261-8699
 contact:
-  andres{dot}lopezlopera{at}uphf{dot}fr
+  andres{dot}lopez{at}umontpellier{dot}fr
 bookmarks:
   <font size="+0.5"><a href="https://anfelopera.github.io/">Homepage</a></font> <br>
   <font size="+0.5"><a href="https://anfelopera.github.io/funding/">Funding</a></font> <br>
